--- a/MVC3/Views/dept/Index.cshtml
+++ b/MVC3/Views/dept/Index.cshtml
@@ -36,7 +36,7 @@
                     <td>@dept.Name</td>
                     <td>@dept.DateOfCreation</td>
                     <td>
-                        <a asp-controller="dept" asp-action="Details" class="btn btn-warning" >Details</a>
+                        <a asp-controller="dept" asp-action="Details" asp-route-id="@dept.Id" class="btn btn-warning">Details</a>
                       
                     </td>
                     <td>
