--- a/MVC3/Views/dept/Details.cshtml
+++ b/MVC3/Views/dept/Details.cshtml
@@ -27,7 +27,7 @@
     </div>
 
 
-    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+    <a class="btn btn-primary" asp-action="Update" asp-route-id="@Model.Id">Edit</a>
     <a class="btn btn-light"  asp-action="Index" >Back To Home</a>
 
 
