--- a/MVC3/Views/dept/Update.cshtml
+++ b/MVC3/Views/dept/Update.cshtml
@@ -11,7 +11,7 @@
 
 <form asp-action="Update">
 
-    @* <div asp-validation-summary="ModelOnly"></div> *@
+     @* <div asp-validation-summary="ModelOnly"  class="text-danger"></div>  *@
 
     <div class="form-group">
         <label class="col-form-label" asp-for="Code"></label>
