--- a/MVC3/Views/Shared/_Layout.cshtml
+++ b/MVC3/Views/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="dept" asp-action="Index">Departments</a>
                         </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Emp" asp-action="Index">Employees</a>
+                        </li>
                     </ul>
                 </div>
             </div>
