--- a/MVC3/Views/dept/Create.cshtml
+++ b/MVC3/Views/dept/Create.cshtml
@@ -33,3 +33,11 @@
 </form>
 
 
+
+@section  ValidationRequiredScript{
+
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+}
+
+
