--- a/MVC3/Views/dept/Update.cshtml
+++ b/MVC3/Views/dept/Update.cshtml
@@ -36,3 +36,8 @@
     <a asp-action="Index" class="btn btn-light"> Cancel</a>
 </form>
 
+
+@section  ValidationRequiredScript{
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+}
