--- a/MVC3/Views/dept/Delete.cshtml
+++ b/MVC3/Views/dept/Delete.cshtml
@@ -11,20 +11,7 @@
 
 <form asp-action="Delete">
 
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Code"></label>
-        <input class="form-control" asp-for="Code" readonly />
-    </div>
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Name"></label>
-        <input class="form-control" asp-for="Name" readonly />
-    </div>
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="DateOfCreation"></label>
-        <input class="form-control" asp-for="DateOfCreation" readonly />
-    </div>
+    <partial name="PartialViews/_DetailsDeleteCommoCode" />
 
 
     <input type="submit" value="Delete" class="btn btn-danger"      @*  id="deleteButton" *@ />
