--- a/MVC3/Views/dept/Update.cshtml
+++ b/MVC3/Views/dept/Update.cshtml
@@ -13,23 +13,7 @@
 
      @* <div asp-validation-summary="ModelOnly"  class="text-danger"></div>  *@
 
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Code"></label>
-        <input class="form-control" asp-for="Code" />
-        <span asp-validation-for="Code" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Name"></label>
-        <input class="form-control" asp-for="Name" />
-        <span asp-validation-for="Name" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="DateOfCreation"></label>
-        <input class="form-control" asp-for="DateOfCreation" />
-
-    </div>
+    <partial name="PartialViews/_CreateUpdateCommonCode" />
 
 
     <input type="submit" value="Save" class="btn btn-primary" />
@@ -38,6 +22,8 @@
 
 
 @section  ValidationRequiredScript{
-    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    @* <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script> *@
+
+    <partial name="_ValidationScriptsPartial"></partial>
 }
