--- a/MVC3/Views/Emp/Create.cshtml
+++ b/MVC3/Views/Emp/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Employee
 @{
     ViewData["Title"] = "Create";
+    
 }
 
 <h1>Create New Employee</h1>
@@ -9,63 +10,7 @@
 <br />
 <br />
 <form asp-action="Create">
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Name"></label>
-        <input class="form-control" asp-for="Name" />
-        <span asp-validation-for="Name" class="text-danger"></span>
-    </div>
-
-
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Email"></label>
-        <input class="form-control" asp-for="Email" />
-        <span asp-validation-for="Email" class="text-danger"></span>
-
-
-
-    </div> <div class="form-group">
-        <label class="col-form-label" asp-for="Age"></label>
-        <input class="form-control" asp-for="Age" />
-        <span asp-validation-for="Age" class="text-danger"></span>
-    </div>
-
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Salary"></label>
-        <input class="form-control" asp-for="Salary" />
-        <span asp-validation-for="Salary" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Address"></label>
-        <input class="form-control" asp-for="Address" />
-        <span asp-validation-for="Address" class="text-danger"></span>
-    </div>
-
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Gender"></label>
-        <input class="form-control" asp-for="Gender" />
-        <span asp-validation-for="Gender" class="text-danger"></span>
-    </div>
-
-
-
-    <div class="form-group">
-
-        <input class="form-check-input" asp-for="IsActive" />
-        <label class="col-form-label" asp-for="IsActive"></label>
-
-
-    </div>
-
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="HiringDate"></label>
-        <input class="form-control" asp-for="HiringDate" />
-
-    </div>
+    <partial name="PartialViews/_CreateUpdateCommonCodeInEmp"/>
 
     <input type="submit" value="Create" class="btn btn-primary" />
     <a asp-action="Index" class="btn btn-primary"> Back To Index</a>
