--- a/MVC3/Views/Emp/Index.cshtml
+++ b/MVC3/Views/Emp/Index.cshtml
@@ -20,6 +20,7 @@
                 <th>@Html.DisplayNameFor(D => D.Name)</th>
                 <th>@Html.DisplayNameFor(D => D.Email)</th>
                 <th>@Html.DisplayNameFor(D => D.Age)</th>
+                <th>@Html.DisplayNameFor(D => D.Department)</th>
                 <th>@Html.DisplayNameFor(D => D.Salary)</th>
                 <th>@Html.DisplayNameFor(D => D.Gender)</th>
                 <th>@Html.DisplayNameFor(D => D.IsActive)</th>
@@ -38,6 +39,7 @@
                     <td>@employee.Name</td>
                     <td>@Html.DisplayFor(w => employee.Email)</td>
                     <td>@employee.Age</td>
+                    <td>@employee.Department?.Name</td>
                     <td>@Html.DisplayFor(w => employee.Salary)</td>
                     <td>@employee.Gender</td>
                     <td>@Html.DisplayFor(w => employee.IsActive)</td>
