--- a/MVC3/Views/Emp/Update.cshtml
+++ b/MVC3/Views/Emp/Update.cshtml
@@ -13,64 +13,7 @@
 
     @* <div asp-validation-summary="ModelOnly"  class="text-danger"></div>  *@
 
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Name"></label>
-        <input class="form-control" asp-for="Name" />
-        <span asp-validation-for="Name" class="text-danger"></span>
-    </div>
-
-
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Email"></label>
-        <input class="form-control" asp-for="Email" />
-        <span asp-validation-for="Email" class="text-danger"></span>
-
-
-
-    </div> <div class="form-group">
-        <label class="col-form-label" asp-for="Age"></label>
-        <input class="form-control" asp-for="Age" />
-        <span asp-validation-for="Age" class="text-danger"></span>
-    </div>
-
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Salary"></label>
-        <input class="form-control" asp-for="Salary" />
-        <span asp-validation-for="Salary" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Email"></label>
-        <input class="form-control" asp-for="Email" />
-        <span asp-validation-for="Email" class="text-danger"></span>
-    </div>
-
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Gender"></label>
-        <input class="form-control" asp-for="Gender" />
-        <span asp-validation-for="Gender" class="text-danger"></span>
-    </div>
-
-
-
-    <div class="form-group">
-
-        <input class="form-check-input" asp-for="IsActive" />
-        <label class="col-form-label" asp-for="IsActive"></label>
-
-
-    </div>
-
-
-    <div class="form-group">
-        <label class="col-form-label" asp-for="HiringDate"></label>
-        <input class="form-control" asp-for="HiringDate" />
-
-    </div>
-
+    <partial name="PartialViews/_CreateUpdateCommonCodeInEmp" />
 
     <input type="submit" value="Save" class="btn btn-primary" />
     <a asp-action="Index" class="btn btn-light"> Cancel</a>
