--- a/MVC3/Views/_ViewImports.cshtml
+++ b/MVC3/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MVC3
 @using MVC3.ViewModels;
 @using MVC3.DAL.Models;
-
+@using MVC3.BLL.Interfaces
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
