--- a/MVC3/Views/Emp/Index.cshtml
+++ b/MVC3/Views/Emp/Index.cshtml
@@ -10,6 +10,18 @@
 <br />
 
 
+<div class="row justify-content-center align-items-center m-3">
+    <form class="row col-8 offset-2">
+        <div class="col-8">
+            <input type="text" name="SearchIn" id="SearchIn" class="form-control" placeholder="Search By Name......" />
+        </div>  
+        <div class="col-4">
+            <input type="submit"  value="Search" class="btn btn-success"/>
+        </div>
+    </form>
+</div>
+
+
 @if (Model.Count() > 0)
 {
 
