--- a/MVC3/Views/_ViewImports.cshtml
+++ b/MVC3/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using MVC3.ViewModels;
 @using MVC3.DAL.Models;
 @using MVC3.BLL.Interfaces
+@using MVC3.PL.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
