Part 02 Refactor Create Employee Action - Upload Image

--- a/MVC3/Views/Emp/Create.cshtml
+++ b/MVC3/Views/Emp/Create.cshtml
@@ -9,7 +9,7 @@
 <br />
 <br />
 <br />
-<form asp-action="Create">
+<form asp-action="Create"  enctype="multipart/form-data">
     <partial name="PartialViews/_CreateUpdateCommonCodeInEmp"/>
 
     <input type="submit" value="Create" class="btn btn-primary" />
