--- a/MVC3/Views/Emp/PartialViews/_CreateUpdateCommonCodeInEmp.cshtml
+++ b/MVC3/Views/Emp/PartialViews/_CreateUpdateCommonCodeInEmp.cshtml
@@ -77,5 +77,13 @@
 
 </div>
 
+
+<div class="form-group">
+
+    <label asp-for="Image" class="col-form-label"></label>
+
+    <input  asp-for="Image" class="form-control-file" />
+
+</div>
 <br />
 <br />
