--- a/MVC3/Views/Emp/Delete.cshtml
+++ b/MVC3/Views/Emp/Delete.cshtml
@@ -11,6 +11,11 @@
 
 <form asp-action="Delete">
 
+    <div class="d-flex justify-content-center align-items-center">
+        >
+        <img src="~/Files/Images/@Model.imageName"  alt="EmployeeImage" class="img-fluid rounded-circle w-50" />
+    </div>
+
     <div class="form-group">
         <label class="col-form-label" asp-for="Name"></label>
         <input class="form-control" asp-for="Name" readonly />
