--- a/MVC3/Views/Emp/Details.cshtml
+++ b/MVC3/Views/Emp/Details.cshtml
@@ -10,6 +10,9 @@
 <br />
 
 <div>
+    <div class="d-flex justify-content-center align-items-center">
+        <img src="~/Files/Images/@Model.imageName" alt="EmployeeImage" class="img-fluid rounded-circle w-50" />
+    </div>
 
     <div class="form-group">
         <label class="col-form-label" asp-for="Name"></label>
