--- a/MVC3/Views/Emp/Index.cshtml
+++ b/MVC3/Views/Emp/Index.cshtml
@@ -33,6 +33,7 @@
     <table class="table table-hover table-striped m-4">
         <thead>
             <tr>
+                <th>Image</th>
                 <th>@Html.DisplayNameFor(D => D.Name)</th>
                 <th>@Html.DisplayNameFor(D => D.Email)</th>
                 <th>@Html.DisplayNameFor(D => D.Age)</th>
@@ -52,6 +53,9 @@
             {
 
                 <tr>
+                    <td>
+                        <img src="~/Files/Images/@employee.imageName" alt="EmployeeImage" class="img-fluid rounded-circle" width="30" height="30" />
+                    </td>
                     <td>@employee.Name</td>
                     <td>@Html.DisplayFor(w => employee.Email)</td>
                     <td>@employee.Age</td>
