--- a/MVC3/Views/Emp/PartialViews/_CreateUpdateCommonCodeInEmp.cshtml
+++ b/MVC3/Views/Emp/PartialViews/_CreateUpdateCommonCodeInEmp.cshtml
@@ -5,7 +5,7 @@
 
 @{
     // var Depts= new SelectList(ViewData["Departments"] as IEnumerable<Department>,nameof(Department.Id) ,  nameof(Department.Name));
-    var Depts = new SelectList(_UnitOfWork.Repo<Department>().GetAll() , nameof(Department.Id), nameof(Department.Name));
+    var Depts = new SelectList(await _UnitOfWork.Repo<Department>().GetAllAsync() , nameof(Department.Id), nameof(Department.Name));
 }
 
 <div class="form-group">
