Part 08 Account Controller - SignUp

--- a/MVC3/Views/_ViewImports.cshtml
+++ b/MVC3/Views/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using MVC3.DAL.Models;
 @using MVC3.BLL.Interfaces
 @using MVC3.PL.ViewModels
+@using MVC3.PL.ViewModels.User
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
